--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -1,59 +1,63 @@
 name: deno
 on: [pull_request]
-
 jobs:
   denops-fmt:
-    runs-on: &runs-on ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - &setup-deno
-        uses: denoland/setup-deno@v1
+      - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
-      - &fmt
-        name: Run fmt
+      - name: Run fmt
         run: deno fmt --check
-
   denops-lint:
-    runs-on: *runs-on
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - *setup-deno
-      - &lint
-        name: Run lint
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
+      - name: Run lint
         run: deno lint --check
-
   denops-check:
-    runs-on: *runs-on
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - *setup-deno
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
       - name: Run check
         run: deno check ./denops/plugin/main.ts
-
   server-fmt:
-    runs-on: *runs-on
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - &server
-        name: cd to server
+      - name: cd to server
         run: server
-      - *setup-deno
-      - *fmt
-
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
+      - name: Run fmt
+        run: deno fmt --check
   server-lint:
-    runs-on: *runs-on
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - *server
-      - *setup-deno
-      - *lint
-
+      - name: cd to server
+        run: server
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
+      - name: Run lint
+        run: deno lint --check
   server-check:
-    runs-on: *runs-on
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - *server
-      - *setup-deno
+      - name: cd to server
+        run: server
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
       - name: Run check
         run: deno check ./main.ts
