--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: cd to server
-        run: server
+        run: cd server
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
@@ -44,7 +44,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: cd to server
-        run: server
+        run: cd server
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
@@ -55,7 +55,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: cd to server
-        run: server
+        run: cd server
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
