--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           deno-version: v1.x
       - name: Run lint
-        run: deno lint --check
+        run: deno lint
   denops-check:
     runs-on: ubuntu-latest
     steps:
@@ -51,7 +51,7 @@ jobs:
         with:
           deno-version: v1.x
       - name: Run lint
-        run: deno lint --check
+        run: deno lint
   server-check:
     runs-on: ubuntu-latest
     defaults:
